--- a/package.json
+++ b/package.json
@@ -3,15 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines" : { 
-    "node" : "10.13.0" 
-  },
   "scripts": {
-    "heroku-postbuild": "webpack -p",
-    "prestart": "webpack",
-    "build": "webpack --watch",
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "lite-server": "lite-server"
   },
   "repository": {
@@ -19,7 +13,7 @@
     "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
   },
   "author": "",
-  "license": "IBM",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/coding-boot-camp/unit18hw/issues"
   },
@@ -29,13 +23,6 @@
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-pwa-manifest": "^4.0.0"
+    "morgan": "^1.9.1"
   }
 }
